--- a/blogs.html
+++ b/blogs.html
@@ -32,20 +32,13 @@
                     <h3>Noticias</h3>
                 </div>
                 <div class="featured-img-container">
-                    <div>
                         <img src="https://cdn.pixabay.com/photo/2016/03/09/09/17/computer-1245714_960_720.jpg" alt="">
-                    </div>
                 </div>
                 <div class="featured-text-container">
                     <h2>Título del post destacado</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit minus delectus ipsa tempora est
                         necessitatibus corporis, nihil cum nobis a enim distinctio consequatur explicabo nisi possimus
-                        vitae sit doloremque deserunt? Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Accusantium ullam maxime quae nisi ad exercitationem animi dolore, minima aspernatur ducimus.
-                        Odio pariatur adipisci architecto mollitia cumque fugit quod inventore hic! Lorem ipsum dolor
-                        sit amet consectetur adipisicing elit. Nesciunt minus harum, consectetur rem nam, praesentium
-                        dicta repellendus iure voluptates ratione delectus eum aspernatur non obcaecati consequatur ea,
-                        odio error. Debitis?</p>
+                        vitae sit doloremque deserunt?</p>
                     <a href="./blog.html" class="blogs-button">Sigue leyendo</a>
                 </div>
             </section>
