--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="Assets/SocialMedia/font/flaticon.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto&display=swap" rel="stylesheet">
+    <link rel="icon" href="./Assets/favicon.png">
 </head>
 
 <body>
