--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="Assets/SocialMedia/font/flaticon.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto&display=swap" rel="stylesheet">
+    <link rel="icon" href="./Assets/favicon.png">
 </head>
 <body>
     <section class="home-container container">
