--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="home">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Blog</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="Assets/SocialMedia/font/flaticon.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="./Assets/favicon.png">
 </head>
 <body>
-    <section class="home-container container">
-        <header>
-            <nav class="nav-container">
-            <section class="nav-logo-container">
-                <a href="#">
-                    <img src="./Assets/Logo-blanco.png" alt="Logo de mi blog">
-                </a>
-            </section>
-            <section class="profile-link">
-                <a href="perfil.html">Sobre mí</a>
-            </section>
-            </nav>
-        </header>
-        <main class="home-main">
-            <section class="home-main-text-container">
-                <h1 class="home-main-text">Conoce las novedades y  <br> noticias del Mundo Tech</h1>
-                <a class="home-main-button" href="blogs.html">Ingresa</a>
-            </section>
-        </main>
-    </section>
-    <section class="icons-container">
+    <nav>
+        <section class="nav-logo-container">
+            <a href="#">
+                <img src="./Assets/Logo-blanco.png" alt="Logo de mi blog">
+            </a>
+        </section>
+        <section class="profile-link">
+            <a href="perfil.html">Sobre mí</a>
+        </section>
+    </nav>
+
+    <main class="home-main">
+            <h1 class="home-main-text">Conoce las novedades y  <br> noticias del Mundo Tech</h1>
+            <a class="home-main-button" href="blogs.html">¡Vamos a verlas!</a>
+    </main>
+
+<section class="icons-container">
         <div class="icons">
             <a class="flaticon-001-facebook icon-item tab" href="https://www.facebook.com/cyn.j.romero"></a>
             <a class="flaticon-013-twitter-1 icon-item tab" href="https://twitter.com/ce_y_ene"></a>
@@ -39,5 +35,6 @@
             <a class="flaticon-008-youtube icon-item tab" href="https://www.youtube.com/channel/UCwrx4f1ip8r1vZJgrquF2Hg"></a>
         </div>
 </section>
+
 </body>
 </html>
