--- a/perfil.html
+++ b/perfil.html
@@ -5,37 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Blog</title>
-    <link rel="stylesheet" href="css/perfil.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="Assets/SocialMedia/font/flaticon.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="./Assets/favicon.png">
 </head>
 
-<body>
+<body class="sections">
 
-    <header>
-        <nav class="nav-container">
-            <section class="nav-logo-container">
-                <a href="./index.html">
-                    <img src="./Assets/Logo-negro.png" alt="Logo de mi blog">
-                </a>
-            </section>
-            <section class="profile-link">
-                <a href="blogs.html">Volver a blogs</a>
-            </section>
-        </nav>
-    </header>
+    <nav class="nav-container">
+        <section class="nav-logo-container">
+            <a href="./index.html">
+                <img src="./Assets/Logo-negro.png" alt="Logo de mi blog">
+            </a>
+        </section>
+        <section class="profile-link back">
+            <a href="blogs.html">Volver a blogs</a>
+        </section>
+    </nav>
 
     <main class="profile-main">
 
-        <section class="profile container">
+        <section class="profile">
             <div class="profile-img-container">
                 <img src="https://cdn.pixabay.com/photo/2015/03/17/14/05/sparkler-677774_960_720.jpg" alt="">
             </div>
             <div class="profile-text-container">
-                <h2>¡Hola!</h2>
-                <p>Mi nombre es Cynthia Romero y soy una estudiante de desarrollo web. Por el momento,
-                    estoy enfocada en el frontend. Me apasiona el diseño y creo que es más que solo
+                <h2>¡Hola! Mi nombre es Cynthia Romero</h2>
+                <p>Soy una estudiante de desarrollo web y, por el momento,
+                    estoy enfocada en el frontend. Me apasiona el diseño, creo que es más que solo
                     decoración. La presentación de una web es parte vital de la comunicación de su mensaje
                     y de la utilidad que puede darle al usuario. Pensando en esto, sigo capacitándome y espero
                     lograr dar una experiencia completa a los que accedan a mis creaciones.
@@ -43,11 +41,11 @@
             </div>
         </section>
 
-        <section class="my-projects">
-            <div class="title-projects container">
+        <section class="my-projects container">
+            <div class="title-projects">
                 <h3>Mis proyectos</h3>
             </div>
-            <div class="projects container">
+            <div class="projects">
                 <article>
                     <h4>Proyecto</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit dolores id ea quibusdam rerum
@@ -89,24 +87,22 @@
         </section>
 
         <section class="contact">
-            <div class="contact-main container">
-                <div class="contact-left">
-                    <div class="contact-img">
-                        <img src="./Assets/IconosBlog/svg/013-newsletter.svg" alt="">
-                    </div>
-                    <div class="contact-text">
-                        <a href="#">Suscribirse</a>
-                        <p>No te pierdas ninguna de nuestras novedades.</p>
-                    </div>
+            <div class="contact-left">
+                <div class="contact-img">
+                    <img src="./Assets/IconosBlog/svg/013-newsletter.svg" alt="">
                 </div>
-                <div class="contact-right">
-                    <div class="contact-img">
-                        <img src="./Assets/IconosBlog/svg/006-like.svg" alt="">
-                    </div>
-                    <div class="contact-text">
-                        <a href="#">Contacto</a>
-                        <p>Escribinos por consultas o sugerencia de temas.</p>
-                    </div>
+                <div class="contact-text">
+                    <a href="#">Suscribirse</a>
+                    <p>No te pierdas ninguna de nuestras novedades.</p>
+                </div>
+            </div>
+            <div class="contact-right">
+                <div class="contact-img">
+                    <img src="./Assets/IconosBlog/svg/006-like.svg" alt="">
+                </div>
+                <div class="contact-text">
+                    <a href="#">Contacto</a>
+                    <p>Escribinos por consultas o sugerencia de temas.</p>
                 </div>
             </div>
         </section>
