cambio en perfil

--- a/perfil.html
+++ b/perfil.html
@@ -32,8 +32,8 @@
             </div>
             <div class="profile-text-container">
                 <h2>¡Hola! Mi nombre es Cynthia Romero</h2>
-                <p>Soy una estudiante de desarrollo web y, por el momento,
-                    estoy enfocada en el frontend. Me apasiona el diseño, creo que es más que solo
+                <p>Soy una estudiante de desarrollo web, enfocada en el aprendizaje
+                    del frontend. Creo que es más que solo
                     decoración. La presentación de una web es parte vital de la comunicación de su mensaje
                     y de la utilidad que puede darle al usuario. Pensando en esto, sigo capacitándome y espero
                     lograr dar una experiencia completa a los que accedan a mis creaciones.
